--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
      </svg>
      <h1 id="app-title" class="text-3xl md:text-4xl font-bold glow-text">ST ing Grade Calculator</h1>
     </div>
-    <p class="text-gray-400 text-sm md:text-base max-w-2xl mx-auto">احسب معدّلك بسرعة وبدقّة لكل موسم، بواجهة بسيطة ومتوافقة مع الجوال</p>
+    <p class="text-gray-400 text-sm md:text-base max-w-2xl mx-auto">يرجى الابلاغ عن اي خطأ او مشكله في التيليغرام المتروك اسفل الصفحه</p>
    </header><!-- Year Tabs -->
    <nav class="px-4 py-4">
     <div class="flex flex-wrap justify-center gap-2 md:gap-3 max-w-4xl mx-auto"><button onclick="selectYear(1)" id="year-tab-1" class="year-tab tab-active px-4 py-2 md:px-6 md:py-3 rounded-xl font-semibold text-sm md:text-base transition-all duration-300"> 1st Year </button> <button onclick="selectYear(2)" id="year-tab-2" class="year-tab px-4 py-2 md:px-6 md:py-3 rounded-xl font-semibold text-sm md:text-base bg-white/10 hover:bg-white/20 transition-all duration-300"> 2nd Year </button> <button onclick="selectYear(3)" id="year-tab-3" class="year-tab px-4 py-2 md:px-6 md:py-3 rounded-xl font-semibold text-sm md:text-base bg-white/10 hover:bg-white/20 transition-all duration-300"> 3rd Year </button> <button onclick="selectYear(4)" id="year-tab-4" class="year-tab px-4 py-2 md:px-6 md:py-3 rounded-xl font-semibold text-sm md:text-base bg-white/10 hover:bg-white/20 transition-all duration-300"> 4th Year </button> <button onclick="selectYear(5)" id="year-tab-5" class="year-tab px-4 py-2 md:px-6 md:py-3 rounded-xl font-semibold text-sm md:text-base bg-white/10 hover:bg-white/20 transition-all duration-300"> 5th Year </button>
